--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <!-- bootstrap stylesheet  -->
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!-- custom stylesheet  -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- header start  -->
     <header>
         <!-- nav start  -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="">
@@ -31,30 +34,30 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- image slider  -->
-        <section class="container">
+        <section class="container mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item py-5 active">
-                        <div class="row d-flex align-items-center p-5 bg-info bg-gradient rounded">
+                        <div class="row d-flex align-items-center p-5 panda-bg-info bg-gradient rounded">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world.</p>
                                 <h1>$420</h1>
-                                <button class="btn bg-warning">Buy Now</button>
+                                <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -63,13 +66,13 @@
 
                     </div>
                     <div class="carousel-item py-5">
-                        <div class="row d-flex align-items-center p-5 bg-info bg-gradient rounded">
+                        <div class="row d-flex align-items-center p-5 panda-bg-info bg-gradient rounded">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>This is the best tv in the world for people who just want to waste time in front of
                                     tv..</p>
                                 <h1>$1200</h1>
-                                <button class="btn bg-warning">Buy Now</button>
+                                <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -78,13 +81,13 @@
                     </div>
                     <div class="carousel-item py-5">
 
-                        <div class="row d-flex align-items-center p-5 bg-info bg-gradient rounded">
+                        <div class="row d-flex align-items-center p-5 panda-bg-info bg-gradient rounded">
                             <div class="col-lg-7">
                                 <h1>X-Box For Your Living Room</h1>
                                 <p>This is the best x-box in the world for people who just want to waste time in front
                                     of fake sports.</p>
                                 <h1>$600</h1>
-                                <button class="btn bg-warning">Buy Now</button>
+                                <button class="panda-btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -110,7 +113,7 @@
     <main>
         <!-- catagories -->
 
-        <section class="container my-5">
+        <section class="container my-5 catagories">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-between">
@@ -132,11 +135,13 @@
                 </div>
             </div>
         </section>
-        <section class="container">
+
+        <!-- shoes collection  -->
+        <section class="container" id="shoes">
             <h2>Shoes</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card border-0 shadow-lg rounded-3 h-100">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Sply 350</h5>
@@ -144,13 +149,13 @@
                                 to additional.</p>
                             <h5>$120</h5>
                         </div>
-                        <div class="card-footer">
-                            <button class="btn-warning">Buy Now>></button>
+                        <div class="m-3">
+                            <button class="panda-btn-buy-now">Buy Now>></button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card border-0 shadow-lg rounded-3 h-100">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Nike 360</h5>
@@ -158,13 +163,13 @@
                                 content.</p>
                             <h5>$320</h5>
                         </div>
-                        <div class="card-footer">
-                            <button class="btn-warning">Buy Now>></button>
+                        <div class="m-3">
+                            <button class="panda-btn-buy-now">Buy Now>></button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card border-0 shadow-lg rounded-3 h-100">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
@@ -173,17 +178,79 @@
                                 height action.</p>
                             <h5>$350</h5>
                         </div>
-                        <div class="card-footer">
-                            <button class="btn btn-warning">Buy Now>></button>
+                        <div class="m-3">
+                            <button class="panda-btn-buy-now">Buy Now>></button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- backpack collection  -->
+        <section class="container my-5" id="backpack">
+            <h2>Backpack</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card border-0 shadow-lg rounded-3 h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red bag</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                            <h5>$120</h5>
+                        </div>
+                        <div class="m-3">
+                            <button class="panda-btn-buy-now">Buy Now>></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg rounded-3 h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Bag</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <h5>$320</h5>
+                        </div>
+                        <div class="m-3">
+                            <button class="panda-btn-buy-now">Buy Now>></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg rounded-3 h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                            <h5>$350</h5>
+                        </div>
+                        <div class="m-3">
+                            <button class="panda-btn-buy-now">Buy Now>></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Subscribe section  -->
+        <section style="height: 300px;"
+            class="container panda-bg-info d-flex justify-content-center align-items-center rounded-3 " id="subscribe">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <P>Get updet on sales, specials and more..</P>
+                <input class="form-control" type="text" placeholder="type your email">
+                <br>
+                <button class="panda-btn-buy-now">SUBMIT</button>
+            </div>
+        </section>
     </main>
 
-    <footer>
+    <footer class="mt-5 text-center">
+        <small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
 
     </footer>
 
